tests/spec/lex/snapshots/assignment.snap
---
source: tests/spec/lex/mod.rs
description: let a = 123;
---
LexResult {
    tokens: [
        Token {
            kind: Let,
            text: "let",
            byte_offset: 0,
            byte_length: 3,
        },
        Token {
            kind: Identifier,
            text: "a",
            byte_offset: 4,
            byte_length: 1,
        },
        Token {
            kind: Equal,
            text: "=",
            byte_offset: 6,
            byte_length: 1,
        },
        Token {
            kind: Integer,
            text: "123",
            byte_offset: 8,
            byte_length: 3,
        },
        Token {
            kind: Semicolon,
            text: ";",
            byte_offset: 11,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 12,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
