tests/spec/lex/snapshots/binary_basic.snap
---
source: tests/spec/lex/mod.rs
description: 0b1010
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0b1010",
            byte_offset: 0,
            byte_length: 6,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 6,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
