tests/spec/lex/snapshots/binary_long.snap
---
source: tests/spec/lex/mod.rs
description: 0b11111111_11111111
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0b11111111_11111111",
            byte_offset: 0,
            byte_length: 19,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 19,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
