tests/spec/lex/snapshots/binary_uppercase_prefix.snap
---
source: tests/spec/lex/mod.rs
description: 0B1010
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0B1010",
            byte_offset: 0,
            byte_length: 6,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 6,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
