tests/spec/lex/snapshots/binary_with_underscores.snap
---
source: tests/spec/lex/mod.rs
description: 0b1111_0000
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0b1111_0000",
            byte_offset: 0,
            byte_length: 11,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 11,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
