tests/spec/lex/snapshots/boolean_false.snap
---
source: tests/spec/lex/mod.rs
description: "false"
---
LexResult {
    tokens: [
        Token {
            kind: Boolean,
            text: "false",
            byte_offset: 0,
            byte_length: 5,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 5,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
