tests/spec/lex/snapshots/boolean_true.snap
---
source: tests/spec/lex/mod.rs
description: "true"
---
LexResult {
    tokens: [
        Token {
            kind: Boolean,
            text: "true",
            byte_offset: 0,
            byte_length: 4,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 4,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
