tests/spec/lex/snapshots/brace_on_next_line.snap
---
source: tests/spec/lex/mod.rs
description: |-
  fn test()
  {
      1
  }
---
LexResult {
    tokens: [
        Token {
            kind: Function,
            text: "fn",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "test",
            byte_offset: 3,
            byte_length: 4,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 7,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 8,
            byte_length: 1,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 10,
            byte_length: 1,
        },
        Token {
            kind: Integer,
            text: "1",
            byte_offset: 16,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 18,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 19,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
