tests/spec/lex/snapshots/chaining_methods_with_comment.snap
---
source: tests/spec/lex/mod.rs
description: |-
  method1()
              // comment
              .method2()
---
LexResult {
    tokens: [
        Token {
            kind: Identifier,
            text: "method1",
            byte_offset: 0,
            byte_length: 7,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 7,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 8,
            byte_length: 1,
        },
        Token {
            kind: Comment,
            text: "// comment",
            byte_offset: 22,
            byte_length: 10,
        },
        Token {
            kind: Dot,
            text: ".",
            byte_offset: 45,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "method2",
            byte_offset: 46,
            byte_length: 7,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 53,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 54,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 55,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
